--- a/app/views/pictures/edit.html.haml
+++ b/app/views/pictures/edit.html.haml
@@ -1,5 +1,7 @@
-%h1 Fix Your Picture!
-
-= render 'form'
-
-= link_to "Cancel Edit", picture_path
+#edit_page.col-md-8.col-md-offset-2
+	.row
+		.panel.panel-default
+			.panel-heading
+				%h1 Fix Your Picture!
+			.panel-body
+				= render 'form'
