--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,8 +10,10 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require 'masonry/transitions'
  *= require_tree .
  *= require_self
+
  */
 
 @import "bootstrap-sprockets";
@@ -29,7 +31,7 @@ h1, h2, h3, h4, h5, h6 {
 	text-align: center;
 }
 
-.photo-container {
+.photo-box-container {
 	opacity: 0.7;
 }
 
@@ -107,7 +109,7 @@ nav {
 		opacity: 0.5;
 		h1 {
 			margin: 0 0 10px 0;
-			color: #ffffff;
+			color: #E40329;
 			font-weight: bold;
 		}
 		.description {
