--- a/app/views/pictures/show.html.haml
+++ b/app/views/pictures/show.html.haml
@@ -1,17 +1,24 @@
-.photo-container
-	.col-md-8.col-md-offset-2
-		.row
-			.panel.panel-default
-				.panel-heading	
-					= image_tag @picture.image.url		
-					%h1= @picture.title
-					%p= @picture.description
-					%p
-					Picture by:
-					= @picture.user.email
+#pic_show.row
+	.col-md-6.col-md-offset-3
+		.panel.panel-default
+			.panel.heading.pic_image
+				= image_tag @picture.image.url(:medium)
+			.panel-body		
+				%h1= @picture.title
+				%p= @picture.description
+			.panel-footer
+				.row
+					.col-md-6
+						%p.user
+							by:
+							= @picture.user.email
+					.col.md-6
+						.btn-group.pull-right
+							- if user_signed_in?
+								= link_to 'Edit', edit_picture_path, class: "btn btn-info"
+								= link_to 'Delete', picture_path, method: :delete, data: { confirm: "Are you sure?" } , class: "btn btn-danger"
 
-					%br
 
-					= link_to 'Back', root_path
-					= link_to 'Edit', edit_picture_path
-					= link_to 'Delete', picture_path, method: :delete, data: { confirm: "Are you sure?" } 
+
+
+						
