--- a/app/views/pictures/index.html.haml
+++ b/app/views/pictures/index.html.haml
@@ -1,7 +1,7 @@
-.col-md-6.col-md-offset-3
+.col-md-6.col-md-offset-4
 	#pics.transitions-enabled
 		- @pictures.each do |picture|
 			.box.panel.panel-default
-				= link_to (image_tag picture.image.url(:medium)), picture
+				= link_to (image_tag picture.image.url), picture
 				%h2= link_to picture.title, picture
 
