Added credits, heroku ready

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,10 +16,19 @@
 					%li= link_to "Gram It!", new_picture_path
 					%li= link_to "Settings", edit_user_registration_path
 					%li= link_to 'Sign Out', destroy_user_session_path, method: :delete
+
+	
 			- else
 				%ul.nav.navbar-nav.navbar-left
 					%li= link_to "Join", new_user_registration_path
 					%li= link_to "Log In", new_user_session_path
+					
+				%ul.nav.navbar-nav.navbar-right
+					%li= link_to "Made by kevineo", 'https://github.com/kevineo'
+					%span.glyphicon.glyphicon-hand-right
+
+
+			
 
 	.container
 		-flash.each do |name, msg|
